--- a/src/css/style.css
+++ b/src/css/style.css
@@ -108,6 +108,11 @@ button {
   border: 0;
   font-size: var(--large-font);
   cursor: pointer;
+  margin-bottom: 0.5em;
+}
+
+button:hover {
+  opacity: 0.8;
 }
 
 .divider {
