--- a/src/css/style.css
+++ b/src/css/style.css
@@ -244,45 +244,34 @@ button:hover {
 }
 
 .product-detail img {
+  padding: 2rem;
   width: 100%;
 }
 
 /* Start cart list card styles */
 .cart-card {
-  display: grid;
-  grid-template-columns: 25% auto 15%;
+  display: flex;
+  gap: 2rem;
   font-size: var(--small-font);
-  /* max-height: 120px; */
   align-items: center;
+  margin-top: 3rem;
 }
 
 .cart-card__image {
-  grid-row: 1/3;
-  grid-column: 1;
+  min-width: 100px;
 }
 
-.cart-card p {
-  margin-top: 0;
+.cart-name-color {
+  width: 100%;
 }
 
-.cart-card .card__name {
-  grid-row: 1;
-  grid-column: 2;
+.cart-item-buttons {
+  display: flex;
+  gap: 1rem
 }
 
-.cart-card__color {
-  grid-row: 2;
-  grid-column: 2;
-}
-
-.cart-card__quantity {
-  grid-row: 1;
-  grid-column: 3;
-}
-
-.cart-card__price {
-  grid-row: 2;
-  grid-column: 3;
+.cart-item-buttons button {
+  padding: 0.5rem 1rem
 }
 
 @media screen and (min-width: 500px) {
